# lc0-pgn-encoder

./: .gitignore  CMakeLists.txt  README.md  example_input.pgn
src/: main.cpp  version.h
src/chess/: bitboard.cc  board.cc  board.h  pgn.h  position.cc  uciloop.h
src/neural/: encoder.cc  encoder.h
src/proto/: net.pb.h
src/utils/: cache-old.h  cache.h  commandline.cc  configfile.cc  esc_codes.cc  filesystem.posix.cc  histogram.cc  logging.cc  logging.h  numa.cc  optionsdict.cc  optionsdict.h  optionsparser.cc  optionsparser.h  protomessage.cc  random.h  spinhelper.h  string.cc
